Correcting free_shipping header name

--- a/donors-choose-data-prep.ipynb
+++ b/donors-choose-data-prep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "metadata": {
     "collapsed": true
    },
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
@@ -84,35 +84,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/brianna/anaconda/lib/python2.7/site-packages/IPython/kernel/__main__.py:4: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "/home/brianna/anaconda/lib/python2.7/site-packages/IPython/kernel/__main__.py:5: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "shipping = projects['vendor_shipping_charges']\n",
+    "shipping = pd.DataFrame(projects['vendor_shipping_charges'])\n",
     "# if shipping_charges = 0 , t\n",
     "# if shipping_charges > 0 , f\n",
     "shipping[shipping == 0] = -1\n",
     "shipping[shipping > 0] = 'No'\n",
     "shipping[shipping == -1] = 'Yes'\n",
     "\n",
-    "shipping.columns = ['free_shipping']"
+    "shipping.columns.values[0]='free_shipping'"
    ]
   },
   {
@@ -124,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -161,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
@@ -181,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -199,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
@@ -217,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
@@ -248,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
@@ -268,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false
    },
@@ -286,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 54,
    "metadata": {
     "collapsed": true
    },
@@ -304,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false
    },
@@ -334,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 56,
    "metadata": {
     "collapsed": true
    },
@@ -353,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 57,
    "metadata": {
     "collapsed": true
    },
@@ -367,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 58,
    "metadata": {
     "collapsed": true
    },
@@ -386,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 59,
    "metadata": {
     "collapsed": true
    },
@@ -405,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 60,
    "metadata": {
     "collapsed": false
    },
@@ -419,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false
    },
@@ -431,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 62,
    "metadata": {
     "collapsed": false
    },
@@ -439,10 +424,10 @@
     {
      "data": {
       "text/plain": [
-       "Index([u'_projectid', u'_teacher_acctid', u'_schoolid', u'school_ncesid', u'school_latitude', u'school_longitude', u'school_city', u'school_state', u'school_zip', u'school_metro', u'school_district', u'school_county', u'school_charter', u'school_magnet', u'school_year_round', u'school_nlns', u'school_kipp', u'school_charter_ready_promise', u'teacher_prefix', u'teacher_teach_for_america', u'teacher_ny_teaching_fellow', u'primary_focus_subject', u'primary_focus_area', u'secondary_focus_subject', u'secondary_focus_area', u'resource_type', u'poverty_level', u'grade_level', u'vendor_shipping_charges', u'sales_tax', u'payment_processing_charges', u'fulfillment_labor_materials', u'total_price_excluding_optional_support', u'total_price_including_optional_support', u'students_reached', u'total_donations', u'num_donors', u'eligible_double_your_impact_match', u'eligible_almost_home_match', u'funding_status', u'date_posted', u'date_completed', u'date_thank_you_packet_mailed', u'date_expiration', u'days_to_completion', u'days_open', u'vendor_shipping_charges', u'funded_by_30', u'scaled_interest_par_sub', u'scaled_interest_par_pov'], dtype='object')"
+       "Index([u'_projectid', u'_teacher_acctid', u'_schoolid', u'school_ncesid', u'school_latitude', u'school_longitude', u'school_city', u'school_state', u'school_zip', u'school_metro', u'school_district', u'school_county', u'school_charter', u'school_magnet', u'school_year_round', u'school_nlns', u'school_kipp', u'school_charter_ready_promise', u'teacher_prefix', u'teacher_teach_for_america', u'teacher_ny_teaching_fellow', u'primary_focus_subject', u'primary_focus_area', u'secondary_focus_subject', u'secondary_focus_area', u'resource_type', u'poverty_level', u'grade_level', u'vendor_shipping_charges', u'sales_tax', u'payment_processing_charges', u'fulfillment_labor_materials', u'total_price_excluding_optional_support', u'total_price_including_optional_support', u'students_reached', u'total_donations', u'num_donors', u'eligible_double_your_impact_match', u'eligible_almost_home_match', u'funding_status', u'date_posted', u'date_completed', u'date_thank_you_packet_mailed', u'date_expiration', u'days_to_completion', u'days_open', u'free_shipping', u'funded_by_30', u'scaled_interest_par_sub', u'scaled_interest_par_pov'], dtype='object')"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 63,
    "metadata": {
     "collapsed": false
    },
@@ -472,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 64,
    "metadata": {
     "collapsed": true
    },
@@ -491,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 65,
    "metadata": {
     "collapsed": false
    },
@@ -505,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 66,
    "metadata": {
     "collapsed": false
    },
@@ -517,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 67,
    "metadata": {
     "collapsed": false
    },
@@ -547,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 68,
    "metadata": {
     "collapsed": false
    },
@@ -565,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 69,
    "metadata": {
     "collapsed": false
    },
@@ -585,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 70,
    "metadata": {
     "collapsed": false
    },
@@ -603,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 71,
    "metadata": {
     "collapsed": false
    },
@@ -621,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 72,
    "metadata": {
     "collapsed": true
    },
@@ -648,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 73,
    "metadata": {
     "collapsed": false
    },
@@ -673,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 74,
    "metadata": {
     "collapsed": true
    },
@@ -691,12 +676,34 @@
    "source": [
     "Remove unnecessary columns from projects dataframe\n",
     "\n",
-    "Removed: _projectid, _teacher_acctid, _schoolid, school_ncesid, school_latitude, school_longitude, school_city, school_state, school_zip, school_district, school_county, school_kipp, school_charter_ready_promise, primary_focus_area, secondary_focus_area, vendor_shipping_charges, sales_tax, payment_processing_charges, fulfillment_labor_materials, total_price_including_optional_support, students_reached, total_donations, num_donors, eligible_double_your_impact_match, eligible_almost_home_match, funding_status, date_posted, date_completed, date_thank_you_packet_mailed, date_expiration, secondary_focus_subject, city_state"
+    "Removed: _projectid, _teacher_acctid, _schoolid, school_ncesid, school_latitude, school_longitude, school_city, school_state, school_zip, school_district, school_county, school_kipp, school_charter_ready_promise, primary_focus_area, secondary_focus_area, sales_tax, payment_processing_charges, fulfillment_labor_materials, total_price_including_optional_support, students_reached, total_donations, num_donors, eligible_double_your_impact_match, eligible_almost_home_match, funding_status, date_posted, date_completed, date_thank_you_packet_mailed, date_expiration, secondary_focus_subject, city_state, vendor_shipping_charges"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 75,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index([u'_projectid', u'_teacher_acctid', u'_schoolid', u'school_ncesid', u'school_latitude', u'school_longitude', u'school_city', u'school_state', u'school_zip', u'school_metro', u'school_district', u'school_county', u'school_charter', u'school_magnet', u'school_year_round', u'school_nlns', u'school_kipp', u'school_charter_ready_promise', u'teacher_prefix', u'teacher_teach_for_america', u'teacher_ny_teaching_fellow', u'primary_focus_subject', u'primary_focus_area', u'secondary_focus_subject', u'secondary_focus_area', u'resource_type', u'poverty_level', u'grade_level', u'vendor_shipping_charges', u'sales_tax', u'payment_processing_charges', u'fulfillment_labor_materials', u'total_price_excluding_optional_support', u'total_price_including_optional_support', u'students_reached', u'total_donations', u'num_donors', u'eligible_double_your_impact_match', u'eligible_almost_home_match', u'funding_status', u'date_posted', u'date_completed', u'date_thank_you_packet_mailed', u'date_expiration', u'days_to_completion', u'days_open', u'free_shipping', u'funded_by_30', u'scaled_interest_par_sub', u'scaled_interest_par_pov', u'city_state', u'completion_rank', u'city_state_cat', u'Unnamed: 0', u'donor_counts', u'med_inc', u'pop', u'party', u'train_test_label'], dtype='object')"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "projects.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
    "metadata": {
     "collapsed": true
    },
@@ -704,16 +711,17 @@
    "source": [
     "drop_cols = ['_projectid', '_teacher_acctid', '_schoolid', 'school_ncesid', 'school_latitude', 'school_longitude',\n",
     "             'school_city', 'school_state', 'school_zip', 'school_district', 'school_county', 'school_kipp',\n",
-    "             'school_charter_ready_promise', 'primary_focus_area', 'secondary_focus_area', 'vendor_shipping_charges',\n",
+    "             'school_charter_ready_promise', 'primary_focus_area', 'secondary_focus_area', 'completion_rank',\n",
     "             'sales_tax', 'payment_processing_charges', 'fulfillment_labor_materials', 'total_price_including_optional_support',\n",
     "             'students_reached', 'total_donations', 'num_donors', 'eligible_double_your_impact_match', \n",
     "             'eligible_almost_home_match', 'funding_status', 'date_posted', 'date_completed', 'date_thank_you_packet_mailed',\n",
-    "             'date_expiration', 'secondary_focus_subject', 'Unnamed: 0', 'city_state']"
+    "             'date_expiration', 'secondary_focus_subject', 'Unnamed: 0', 'city_state', 'donor_counts', 'days_open', \n",
+    "             'days_to_completion', 'vendor_shipping_charges']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 77,
    "metadata": {
     "collapsed": false
    },
@@ -733,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 78,
    "metadata": {
     "collapsed": true
    },
@@ -751,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 79,
    "metadata": {
     "collapsed": false
    },
@@ -771,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 80,
    "metadata": {
     "collapsed": true
    },
