fixed outside_dat, fixed outside_dat read-in on data prep, add googtrends to api_calls

--- a/donors-choose-data-prep.ipynb
+++ b/donors-choose-data-prep.ipynb
@@ -94,8 +94,8 @@
    },
    "outputs": [],
    "source": [
-    "outside_dat =  pd.read_csv('../Data/outside_dat.csv', \n",
-    "                           dtype = {'zip': np.str_, 'med_inc': np.float64, 'pop': np.float64, \n",
+    "outside_dat =  pd.read_csv('../IndividualScripts/outside_dat_merge/outside_datmay16.csv', \n",
+    "                           dtype = {'school_zip': np.str_, 'med_inc': np.float64, 'pop': np.float64, \n",
     "                                    'party': np.str_})"
    ]
   },
@@ -1348,7 +1348,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.9"
+   "version": "2.7.5"
   }
  },
  "nbformat": 4,
