Removing school_metro

--- a/donors-choose-data-prep.ipynb
+++ b/donors-choose-data-prep.ipynb
@@ -849,7 +849,7 @@
     "             'total_price_including_optional_support', 'students_reached', 'total_donations', 'num_donors', 'eligible_double_your_impact_match', \n",
     "             'eligible_almost_home_match', 'funding_status', 'date_posted', 'date_completed', 'date_thank_you_packet_mailed',\n",
     "             'date_expiration', 'secondary_focus_subject', 'Unnamed: 0', 'city_state', 'donor_counts', 'days_open', \n",
-    "             'days_to_completion', 'vendor_shipping_charges', 'city_state_cat', 'keep_drop', 'year_week', 'city_state_counts']"
+    "             'days_to_completion', 'vendor_shipping_charges', 'city_state_cat', 'keep_drop', 'year_week', 'city_state_counts', 'school_metro']"
    ]
   },
   {
